assembler/grammar.txt

program = {line}, EOF;

line = [LABEL], [command], [COMMENT], NEWLINE;

command = mnemonic, [operand, [operand]]

mnemonic = "push" | "pop" | ...

operand = register | NUMBER | IDENTIFIER

register = "r0" | "r1" | ...
